fixed login spacing and font-size

--- a/src/assets/styles/form.scss
+++ b/src/assets/styles/form.scss
@@ -30,6 +30,10 @@
     gap: 1rem;
     -webkit-column-gap: 1rem;
     -moz-column-gap: 1rem;
+    font-size: 16px;
+    .primary, .neutral {
+      font-size: 16px;
+    }
     
     .forgotPassword {
       font-size: 14px;
